# interview_Eagle_Dynamics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
BallCollision/Source/: Application.cpp  Application.h  Ball.h  CollisionHandler.h  CollisionSystem.cpp  CollisionSystem.h  Core.h  MiddleAverageFilter.h  QuadTree.h  main.cpp
